--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>RABINDRA KUMAR SHARMA</title>
     <link href="homepage.css" rel="stylesheet" />
     <link href="ArrayAPI.css" rel="stylesheet" />
     <link href="chose.css" rel="stylesheet" />
     <link href="Project.css" rel="stylesheet" />
-    <link href="Performance.css" rel="stylesheet" />
     <link href="Footer.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/1f8523c65a.js"></script>
   </head>
