--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="chose.css" rel="stylesheet" />
     <link href="Project.css" rel="stylesheet" />
     <link href="Footer.css" rel="stylesheet" />
+    <link href="Performance.css" rel="stylesheet" />
+
     <script src="https://kit.fontawesome.com/1f8523c65a.js"></script>
   </head>
   <body>
