--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
               <button class="btnReadmore">
                 <a
                   class="no-underline"
-                  href="https://www.fylehq.com/"
+                  href="https://github.com/rabindr718"
                   target="_blank"
                   >READ MORE ➡</a
                 >
@@ -171,7 +171,7 @@
               <button class="btnReadmore">
                 <a
                   class="no-underline"
-                  href="https://www.fylehq.com/"
+                  href="https://github.com/rabindr718"
                   target="_blank"
                   >READ MORE ➡</a
                 >
@@ -196,7 +196,7 @@
               <button class="btnReadmore">
                 <a
                   class="no-underline"
-                  href="https://www.fylehq.com/"
+                  href="https://github.com/rabindr718"
                   target="_blank"
                   >READ MORE ➡</a
                 >
@@ -221,7 +221,7 @@
               <button class="btnReadmore">
                 <a
                   class="no-underline"
-                  href="https://www.fylehq.com/"
+                  href="https://github.com/rabindr718"
                   target="_blank"
                   >READ MORE ➡</a
                 >
@@ -247,7 +247,7 @@
               <button class="btnReadmore">
                 <a
                   class="no-underline"
-                  href="https://www.fylehq.com/"
+                  href="https://github.com/rabindr718"
                   target="_blank"
                   >READ MORE ➡</a
                 >
@@ -273,7 +273,7 @@
               <button class="btnReadmore">
                 <a
                   class="no-underline"
-                  href="https://www.fylehq.com/"
+                  href="https://github.com/rabindr718"
                   target="_blank"
                   >READ MORE ➡</a
                 >
@@ -298,7 +298,7 @@
               <button class="btnReadmore">
                 <a
                   class="no-underline"
-                  href="https://www.fylehq.com/"
+                  href="https://github.com/rabindr718"
                   target="_blank"
                   >READ MORE ➡</a
                 >
@@ -323,7 +323,7 @@
               <button class="btnReadmore">
                 <a
                   class="no-underline"
-                  href="https://www.fylehq.com/"
+                  href="https://github.com/rabindr718"
                   target="_blank"
                   >READ MORE ➡</a
                 >
@@ -348,7 +348,7 @@
               <button class="btnReadmore">
                 <a
                   class="no-underline"
-                  href="https://www.fylehq.com/"
+                  href="https://github.com/rabindr718"
                   target="_blank"
                   >READ MORE ➡</a
                 >
